--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "author": "@yongjun21",
   "license": "ISC",
   "dependencies": {
+    "async": "^1.5.0",
     "babel-preset-es2015": "^6.1.2",
     "babelify": "^7.2.0",
     "browserify": "^12.0.1",
