--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "watch": "npm run build && npm run watch-html & npm run watch-css & npm run watch-js & npm run start-server",
     "watch-html": "watch-spawn -p 'src/index.html' npm run build-html",
     "watch-css": "watch-spawn -p 'src/style.css' npm run build-css",
-    "watch-js": "watchify src/game.js --outfile dist/game.js --transform babelify --verbose"
+    "watch-js": "watchify src/game.js --outfile dist/game.js --transform babelify --verbose",
+    "deploy": "npm run build && surge dist http://2048.daburu.xyz"
   },
   "repository": {
     "type": "git",
@@ -31,12 +32,14 @@
   "author": "@yongjun21",
   "license": "ISC",
   "dependencies": {
-    "async": "^1.5.0",
-    "babel-preset-es2015": "^6.1.2",
+    "async": "^1.5.1",
+    "babel-preset-es2015": "^6.3.13",
     "babelify": "^7.2.0",
     "browserify": "^12.0.1",
     "http-server": "^0.8.5",
-    "semistandard": "^7.0.2"
+    "lodash.debounce": "^4.0.1",
+    "semistandard": "^7.0.4",
+    "surge": "^0.17.4"
   },
   "devDependencies": {
     "surge": "^0.17.3",
