--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "watch-html": "watch-spawn -p 'src/index.html' npm run build-html",
     "watch-css": "watch-spawn -p 'src/style.css' npm run build-css",
     "watch-js": "watchify src/game.js --outfile dist/game.js --transform babelify --verbose",
-    "deploy": "npm run build && surge dist http://2048.daburu.xyz"
+    "deploy": "npm run build && AWS_PROFILE=yongjun21 aws s3 sync dist s3://2048.yongjun.sg"
   },
   "repository": {
     "type": "git",
@@ -36,13 +36,11 @@
     "babel-preset-es2015": "^6.3.13",
     "babelify": "^7.2.0",
     "browserify": "^12.0.1",
-    "http-server": "^0.8.5",
+    "http-server": "^0.11.1",
     "lodash.debounce": "^4.0.1",
-    "semistandard": "^7.0.4",
-    "surge": "^0.17.4"
+    "semistandard": "^7.0.4"
   },
   "devDependencies": {
-    "surge": "^0.17.3",
     "watch-spawn": "^1.0.6",
     "watchify": "^3.6.0"
   }
